# configuration-management

./: .env.example  .gitignore  README.md  docker-compose.yml  setup.sh
backend/: .env.example  Dockerfile  Makefile  pyproject.toml
backend/scripts/: init-db.sql
backend/src/: main.py  register_event_handlers.py
backend/src/apis/models/: configuration_models.py
backend/src/apis/routers/: configurations.py
backend/src/application/event_handlers/: __init__.py  audit_handler.py  domain_events_handler.py
backend/src/application/repositories/: configuration_repository.py
backend/src/application/services/: configuration_service.py
backend/src/configs/: __init__.py  settings.py
backend/src/domain/: configuration.py
backend/src/domain/constants/: __init__.py  event_topics.py
backend/src/domain/entities/: configuration.py
backend/src/domain/events/: configuration_events.py
backend/src/infrastructure/database/: __init__.py  connection.py  models.py
backend/src/utils/: logging.py
backend/tests/: conftest.py
backend/tests/integration/api/: test_configurations_api.py
backend/tests/unit/: test_configuration_event_handlers.py  test_configuration_service_events.py
frontend/: Dockerfile  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.css
frontend/src/components/: Badge.css  Badge.tsx  Button.css  Button.tsx  Card.css  Card.tsx  FormField.css  FormField.tsx  Sidebar.tsx  TopHeader.tsx
frontend/src/pages/: ConfigurationsList.css  ConfigurationsList.tsx  (+5 more)
(+4 files in other folders)
